dylanvu-portfolio/src/styles/contribution.css
:root {
    --contribution-margin-left-right: 15%;
}

.contribution {
    color: #36393F;
    padding-top: 2rem;
    padding-bottom: 2rem;
    margin-left: var(--contribution-margin-left-right);
    margin-right: var(--contribution-margin-left-right);
}

.contribution div {
    padding-top: 0.7rem;
    padding-bottom: 0.7rem;
}

.contribution a:visited {
    color: #36393F;
    text-decoration: underline;
}

.contribution a {
    color: #36393F;
    text-decoration: underline;
}

.githubIcon {
    color: #36393f;
    font-size: 6rem;
}

.githubIcon:hover {
    transition: transform .7s ease-in-out;
    transform: rotate(720deg);
}

/* <--------------- mobile most of general rules ----------------> */
@media screen and (max-width: 1023px) {
    :root {
        --contribution-margin-left-right: 0%;
    }

    .githubIcon {
        color: #36393f;
        font-size: 3.5rem;
    }
}

